[package]
name = "coinbase_latency_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
tokio-rustls   = "0.26"
rustls         = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots   = "0.26"
chrono         = { version = "0.4", features = ["clock"] }
uuid           = { version = "1", features = ["v4"] }
base64         = "0.22"
hmac           = "0.12"
sha2           = "0.10"
lazy_static    = "1.4"

# 读取 / 解析配置文件
serde          = { version = "1.0", features = ["derive"] }
toml           = "0.8"
dashmap = "6.1.0"
